Fix Navbar overlap

--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,12 @@
     transform: rotate(360deg);
   }
 } */
+* {
+  box-sizing: border-box;
+}
+.center-col {
+  margin-top: 100px;
+}
 .navbar {
   background-color: navy;
   z-index: 1000;
